features/AG-3235 fix upgrade btn (set nowrap)

--- a/src/popup/components/InfoMessage/info-message.pcss
+++ b/src/popup/components/InfoMessage/info-message.pcss
@@ -67,6 +67,7 @@
         letter-spacing: 0.06rem;
         border-radius: 5px;
         font-size: 1.5rem;
+        white-space: nowrap;
 
         &--feedback {
             min-width: 170px;
